[package]
name = "jpeg-to-pdf"
version = "0.1.0"
authors = ["Kai Page <kai@quantaly.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jpeg-decoder = "0.1"
lazy_static = "1.4"
kamadak-exif = "0.5"
printpdf = "0.3"
