[package]
name = "jpeg-to-pdf"
version = "0.2.2"
authors = ["Kai Page <kai@quantaly.net>"]
edition = "2018"
description = "Create PDFs from JPEG images"
readme = "README.md"
repository = "https://github.com/Quantaly/jpeg-to-pdf"
license = "MIT OR Apache-2.0"
keywords = ["jpeg", "jpg", "pdf"]
categories = ["multimedia::images", "command-line-utilities"]

[[bin]]
name = "jpeg-to-pdf"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
img-parts = "0.2"
jpeg-decoder = "0.1"
kamadak-exif = "0.5"
printpdf = "0.3"
structopt = "0.3"

[dev-dependencies]
version-sync = "0.9"
